<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="status"
            type="Boolean" />
        <variable
            name="hasLocker"
            type="Boolean" />
        <variable
            name="id"
            type="String" />
        <variable
            name="credit"
            type="Double" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.HomeFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_first_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_6x"
                android:layout_marginTop="@dimen/spacing_10x"
                android:background="@drawable/cut_edge_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_locker_lable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_7x"
                    android:text="@string/locker"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_locker_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_locker_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_7x"
                    android:text="@{hasLocker ? id : @string/noLocker}"
                    android:textColor="@color/colorPinkUsed"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_locker_lable"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_status_box"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/spacing_6x"
                android:layout_marginTop="@dimen/spacing_10x"
                android:background="@drawable/cut_edge_gray"
                app:layout_constraintBottom_toBottomOf="@+id/cl_cost_box"
                app:layout_constraintEnd_toStartOf="@+id/cl_cost_box"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_first_box">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_status_lable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_7x"
                    android:text="@{hasLocker ? @string/status : @string/noLocker}"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/iv_status"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_status"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="@dimen/spacing_4x"
                    android:src="@{status ? @drawable/ic_lock_open_24px : @drawable/ic_lock_24px}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status_lable" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_cost_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_6x"
                android:layout_marginTop="@dimen/spacing_10x"
                android:background="@drawable/cut_edge_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cl_status_box"
                app:layout_constraintTop_toBottomOf="@+id/cl_first_box">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_cost_lable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_7x"
                    android:text="@string/creddit"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tv_cost"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_7x"
                    android:text="@{credit.toString()}"
                    android:textColor="@color/colorGreenUsed"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_cost_lable" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_unlock"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_6x"
                android:layout_marginBottom="@dimen/spacing_5x"
                android:padding="@dimen/spacing_5x"
                android:text="@{hasLocker ? @string/unlock : @string/getLocker}"
                android:textAllCaps="true"
                android:textColor="@color/colorGreenUsed"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_return"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@color/colorGreenUsed"
                app:strokeWidth="4dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_return"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_6x"
                android:layout_marginEnd="24dp"
                android:padding="@dimen/spacing_5x"
                android:text="@string/returnLocker"
                android:textAllCaps="true"
                android:textColor="@color/colorGreenUsed"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_unlock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_unlock"
                app:strokeColor="@color/colorGreenUsed"
                app:strokeWidth="4dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
</layout>
